Final Commit for Mission to mars scraping

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Mission to Mars</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+   <!-- Bootstrap CSS -->
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+   crossorigin="anonymous">
 </head>
-
-<body>
+<body class='text-white'style="background-color:black;" >
   <div class="container">
 
-    <div class="jumbotron text-center">
-      <h1>Mission to Mars</h1>
-      <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrap new Data!</a></p>
+    <!-- Jumbotron -->
+    <div class="jumbotron text-center" style="background-image: url(https://www.wallpaperbetter.com/wallpaper/897/576/61/mars-planet-space-1080P-wallpaper.jpg); background-size: 100%; height: 100%;">
+        <h1 class="display-4" >Mission to Mars</h1>
+        <a class="btn btn-lg text-white" style="background-color:#2a0ec1;" href="/scrape" role="button">Scrape New
+            Data</a>
+    </div>
+    <!---Mars News scraping-->
+    <div class="container">
+        <h2>Latest Mars News</h2>
+        <h4 style="color:aqua">{{data.nasa_news_title}}</h4>
+        <p>{{data.nasa_news_paragraph}}</p>
     </div>
 
-  </div>
-  </body>  
+    <div class="container">
+      <div class='row'>
+        <div class="col-lg-8 col-md-8 col-sm-6 col-xm-12">
+        <h3>Featured Mars Image</h3>
+        <img src="{{data.full_image_url}}" style="max-width:100%; max-height: auto;" alt="mars image">
+        
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-6 col-xm-12">
+          <div class="card" style="width: 20rem;">
+            <div class="card-body text-white bg-dark">
+              <h5 class="card-title">Current Weather on Mars</h5>
+              <p class="card-text">{{data.mars_weather}}</p>
+              
+            </div>
+          </div>
+          <!-- Table -->
+          <br>
+          <h5>Mars Facts</h5>
+          <table>{{ data.mars_facts|safe}}</table>
+
+        </div>
+      </div>
+    </div><!---container for image and table closed-->
+    <h3 style="padding-top:30px; text-align: center;">Mars Hemispheres</h3>
+    <div class='card-deck'>
+      <div class='col-md-12'>
+          <div class="row">
+              {% for item in data.hemisphere_img_urls %}
+              <div class="col-md-6">
+                  <div class="card text-white bg-dark" style="margin: 30px;">
+                      <img class="card-img-top" src="{{item.img_url}}" />
+                      <div class="card-body">
+                          <p class="card-text">{{ item.title }}</p>
+                      </div>
+                  </div>
+              </div>
+              {% endfor %}
+          </div>
+              
+
+      </div>
+    </div>
+
+
+  </div> <!---body->container closed-->
+</body>
+
+</html>
